--- a/ReHouse.FrontEnd/ReHouse.FrontEnd.csproj
+++ b/ReHouse.FrontEnd/ReHouse.FrontEnd.csproj
@@ -392,6 +392,7 @@
     <Content Include="Content\images\logomobile.png" />
     <Content Include="Content\images\m2.png" />
     <Content Include="Content\images\m21.png" />
+    <Content Include="Content\images\mini.png" />
     <Content Include="Content\images\newred.jpg" />
     <Content Include="Content\images\news1.png" />
     <Content Include="Content\images\news2.png" />
