--- a/ReHouse.Utils/ReHouse.Utils.csproj
+++ b/ReHouse.Utils/ReHouse.Utils.csproj
@@ -339,6 +339,10 @@
     <Compile Include="Migrations\201711090808428_slider-updt.Designer.cs">
       <DependentUpon>201711090808428_slider-updt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711101025144_summory-patch.cs" />
+    <Compile Include="Migrations\201711101025144_summory-patch.Designer.cs">
+      <DependentUpon>201711101025144_summory-patch.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -432,6 +436,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711090808428_slider-updt.resx">
       <DependentUpon>201711090808428_slider-updt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711101025144_summory-patch.resx">
+      <DependentUpon>201711101025144_summory-patch.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
