--- a/ReHouse.FrontEnd/ReHouse.FrontEnd.csproj
+++ b/ReHouse.FrontEnd/ReHouse.FrontEnd.csproj
@@ -467,6 +467,9 @@
     </Content>
     <Content Include="Content\stylecomm.css" />
     <Content Include="Content\wysiwyg\jquery-te-1.4.0.css" />
+    <Content Include="Content\wysiwyg\jquery-te-1.4.0.min.css">
+      <DependentUpon>jquery-te-1.4.0.css</DependentUpon>
+    </Content>
     <Content Include="Content\wysiwyg\jquery-te-1.4.0.min.js" />
     <Content Include="Content\wysiwyg\jquery-te.png" />
     <Content Include="favicon.ico" />
