--- a/ReHouse.FrontEnd/bundleconfig.json
+++ b/ReHouse.FrontEnd/bundleconfig.json
@@ -286,5 +286,11 @@
     "inputFiles": [
       "Content/animate.css"
     ]
+  },
+  {
+    "outputFileName": "Content/wysiwyg/jquery-te-1.4.0.min.css",
+    "inputFiles": [
+      "Content/wysiwyg/jquery-te-1.4.0.css"
+    ]
   }
 ]
