--- a/ReHouse.FrontEnd/ReHouse.FrontEnd.csproj
+++ b/ReHouse.FrontEnd/ReHouse.FrontEnd.csproj
@@ -739,6 +739,9 @@
     <Content Include="Areas\Cabinet\Views\Managers\Add.cshtml" />
     <Content Include="Areas\Cabinet\Views\Shared\Manager\_listOfManagers.cshtml" />
     <Content Include="Areas\Cabinet\Views\Slider\Edit.cshtml" />
+    <Content Include="Areas\Cabinet\Views\AdminFeedbacks\Add.cshtml" />
+    <Content Include="Areas\Cabinet\Views\AdminFeedbacks\Edit.cshtml" />
+    <Content Include="Areas\Cabinet\Views\AdminFeedbacks\List.cshtml" />
     <None Include="bundleconfig.json" />
     <Content Include="Content\fonts\MyriadPro\MyriadPro-Black.woff" />
     <Content Include="Content\fonts\MyriadPro\MyriadPro-Regular.woff" />
