--- a/ReHouse.Utils/ReHouse.Utils.csproj
+++ b/ReHouse.Utils/ReHouse.Utils.csproj
@@ -349,6 +349,14 @@
     <Compile Include="Migrations\201711101025144_summory-patch.Designer.cs">
       <DependentUpon>201711101025144_summory-patch.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711170811105_adminfb.cs" />
+    <Compile Include="Migrations\201711170811105_adminfb.Designer.cs">
+      <DependentUpon>201711170811105_adminfb.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711170839243_adminfb1.cs" />
+    <Compile Include="Migrations\201711170839243_adminfb1.Designer.cs">
+      <DependentUpon>201711170839243_adminfb1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -445,6 +453,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711101025144_summory-patch.resx">
       <DependentUpon>201711101025144_summory-patch.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711170811105_adminfb.resx">
+      <DependentUpon>201711170811105_adminfb.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711170839243_adminfb1.resx">
+      <DependentUpon>201711170839243_adminfb1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
