--- a/ReHouse.FrontEnd/Web.config
+++ b/ReHouse.FrontEnd/Web.config
@@ -39,12 +39,12 @@
     </httpModules>
   </system.web>
   <system.webServer>
-    <!--<httpErrors errorMode="Custom" existingResponse="Replace" defaultResponseMode="ExecuteURL">
+    <httpErrors errorMode="Custom" existingResponse="Replace" defaultResponseMode="ExecuteURL">
       <remove statusCode="404" subStatusCode="-1"/>
-      <remove statusCode="500" subStatusCode="-1"/>
+      <!--<remove statusCode="500" subStatusCode="-1"/>-->
       <error statusCode="404" path="/Error/NotFound" responseMode="ExecuteURL"/>
-      <error statusCode="500" path="/Error/InternalServerError" responseMode="ExecuteURL"/>
-    </httpErrors>-->
+      <!--<error statusCode="500" path="/Error/InternalServerError" responseMode="ExecuteURL"/>-->
+    </httpErrors>
     <modules>
       <remove name="FormsAuthentication" />
       <remove name="ApplicationInsightsWebTracking" />
