--- a/ReHouse.FrontEnd/ReHouse.FrontEnd.csproj
+++ b/ReHouse.FrontEnd/ReHouse.FrontEnd.csproj
@@ -239,6 +239,7 @@
     <Compile Include="Areas\Cabinet\Controllers\BaseCabinetController.cs" />
     <Compile Include="Areas\Cabinet\Controllers\AdminFeedbacksController.cs" />
     <Compile Include="Areas\Cabinet\Controllers\ManagersController.cs" />
+    <Compile Include="Areas\Cabinet\Controllers\PartnersController.cs" />
     <Compile Include="Areas\Cabinet\Controllers\TagPagesController.cs" />
     <Compile Include="Areas\Cabinet\Controllers\TextsController.cs" />
     <Compile Include="Areas\Cabinet\Controllers\SeoParametrsController.cs" />
@@ -748,6 +749,7 @@
     <Content Include="Areas\Cabinet\Views\AdminFeedbacks\Edit.cshtml" />
     <Content Include="Areas\Cabinet\Views\AdminFeedbacks\List.cshtml" />
     <Content Include="Areas\Cabinet\Views\Shared\AdminFeedback\_listOfFeedbacks.cshtml" />
+    <Content Include="Areas\Cabinet\Views\Partners\List.cshtml" />
     <None Include="bundleconfig.json" />
     <Content Include="Content\fonts\MyriadPro\MyriadPro-Black.woff" />
     <Content Include="Content\fonts\MyriadPro\MyriadPro-Regular.woff" />
