--- a/ReHouse.FrontEnd/ReHouse.FrontEnd.csproj
+++ b/ReHouse.FrontEnd/ReHouse.FrontEnd.csproj
@@ -541,6 +541,10 @@
     <Content Include="Scripts\deleteArticles.min.js">
       <DependentUpon>deleteArticles.js</DependentUpon>
     </Content>
+    <Content Include="Scripts\deletePartners.js" />
+    <Content Include="Scripts\deleteDistricts - Copy.min.js">
+      <DependentUpon>deletePartners.js</DependentUpon>
+    </Content>
     <Content Include="Scripts\deleteManagers.js" />
     <Content Include="Scripts\deleteBuilders - Copy.min.js">
       <DependentUpon>deleteManagers.js</DependentUpon>
@@ -750,6 +754,7 @@
     <Content Include="Areas\Cabinet\Views\AdminFeedbacks\List.cshtml" />
     <Content Include="Areas\Cabinet\Views\Shared\AdminFeedback\_listOfFeedbacks.cshtml" />
     <Content Include="Areas\Cabinet\Views\Partners\List.cshtml" />
+    <Content Include="Areas\Cabinet\Views\Shared\Partner\_listOfPartners.cshtml" />
     <None Include="bundleconfig.json" />
     <Content Include="Content\fonts\MyriadPro\MyriadPro-Black.woff" />
     <Content Include="Content\fonts\MyriadPro\MyriadPro-Regular.woff" />
