--- a/ReHouse.Utils/ReHouse.Utils.csproj
+++ b/ReHouse.Utils/ReHouse.Utils.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.Helpers.dll</HintPath>
@@ -361,6 +362,10 @@
     <Compile Include="Migrations\201711170839243_adminfb1.Designer.cs">
       <DependentUpon>201711170839243_adminfb1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711212003527_partners.cs" />
+    <Compile Include="Migrations\201711212003527_partners.Designer.cs">
+      <DependentUpon>201711212003527_partners.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -463,6 +468,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711170839243_adminfb1.resx">
       <DependentUpon>201711170839243_adminfb1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711212003527_partners.resx">
+      <DependentUpon>201711212003527_partners.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
