--- a/ReHouse.FrontEnd/Web.config
+++ b/ReHouse.FrontEnd/Web.config
@@ -138,8 +138,10 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Local" connectionString="Data Source=PC\SQLEXPRESS;Initial Catalog=ReHouse;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="smarterAsp" connectionString="Data Source=sql6001.smarterasp.net;Initial Catalog=DB_A1E43C_rehouse;User Id=DB_A1E43C_rehouse_admin;Password=rehouse123456;" providerName="System.Data.SqlClient" />
+    <!--<add name="smarterAsp" connectionString="Data Source=sql6001.smarterasp.net;Initial Catalog=DB_A1E43C_rehouse;User Id=DB_A1E43C_rehouse_admin;Password=rehouse123456;" providerName="System.Data.SqlClient" />-->
+    
+    
+    <add name="smarterAsp" connectionString="Data Source=SQL6002.site4now.net;Initial Catalog=DB_A1E43C_rehouseold;User Id=DB_A1E43C_rehouseold_admin;Password=rehouse123456;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
 </configuration>
