--- a/ReHouse.FrontEnd/Web.config
+++ b/ReHouse.FrontEnd/Web.config
@@ -39,12 +39,12 @@
     </httpModules>
   </system.web>
   <system.webServer>
-    <!--<httpErrors errorMode="Custom" existingResponse="Replace" defaultResponseMode="ExecuteURL">
+    <httpErrors errorMode="Custom" existingResponse="Replace" defaultResponseMode="ExecuteURL">
       <remove statusCode="404" subStatusCode="-1"/>
-      --><!--<remove statusCode="500" subStatusCode="-1"/>--><!--
+      <remove statusCode="500" subStatusCode="-1"/>
       <error statusCode="404" path="/Error/NotFound" responseMode="ExecuteURL"/>
-      --><!--<error statusCode="500" path="/Error/InternalServerError" responseMode="ExecuteURL"/>--><!--
-    </httpErrors>-->
+      <error statusCode="500" path="/Error/InternalServerError" responseMode="ExecuteURL"/>
+    </httpErrors>
     <modules>
       <remove name="FormsAuthentication" />
       <remove name="ApplicationInsightsWebTracking" />
@@ -140,7 +140,7 @@
   <connectionStrings>
     <!--<add name="Local" connectionString="Data Source=PC\SQLEXPRESS;Initial Catalog=ReHouse;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <add name="smarterAsp" connectionString="Data Source=sql6001.smarterasp.net;Initial Catalog=DB_A1E43C_rehouse;User Id=DB_A1E43C_rehouse_admin;Password=rehouse123456;" providerName="System.Data.SqlClient" />
-    
+
     <!--<add name="smarterAsp" connectionString="Data Source=SQL6001.SmarterASP.NET;Initial Catalog=DB_A1E43C_rehousetest;User Id=DB_A1E43C_rehousetest_admin;Password=rehouse123456;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
 
